# capacita

./: pyproject.toml
src/app/: main.py
src/app/data/processed/: tabelas.csv  uniao_tabelas.csv
src/app/data/raw/: tabela_vendas_3_meses - Copia (2).docx
