[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Francisco Edson Lopes da Silva",email = "fco.edson.lopes@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-docx (>=1.1.2,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "app", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
